# ChangeLog for net-im/gossip
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.47 2006/08/30 20:40:12 foser Exp $

*gossip-0.15 (30 Aug 2006)

  30 Aug 2006; Marinus Schraal <foser@gentoo.org> gossip-0.15.ebuild :
  New release

*gossip-0.14 (04 Aug 2006)

  04 Aug 2006; Marinus Schraal <foser@gentoo.org> gossip-0.14.ebuild :
  New release

  03 Aug 2006; Marinus Schraal <foser@gentoo.org> files/gossip-0.13-ppc_conn_fix.patch :
  zip patch so it doesn't get a cvs id tag

*gossip-0.13-r1 (03 Aug 2006)

  03 Aug 2006; Marinus Schraal <foser@gentoo.org> gossip-0.13-r1.ebuild,
  files/gossip-0.13-ppc_conn_fix.patch :
  Add fix for connection issues on PPC

*gossip-0.13 (31 Jul 2006)

  31 Jul 2006; Marinus Schraal <foser@gentoo.org> gossip-0.13.ebuild :
  New release

*gossip-0.12 (08 Jul 2006)

  08 Jul 2006; Marinus Schraal <foser@gentoo.org> gossip-0.12.ebuild :
  New release
  Add gnome-doc-utils dep (#130939)

  26 Jun 2006; Markus Rothe <corsair@gentoo.org> gossip-0.11.2-r1.ebuild:
  Added ~ppc64; bug #136906

*gossip-0.11.2-r1 (16 Jun 2006)

  16 Jun 2006; Tony Vroon <chainsaw@gentoo.org> -gossip-0.11.2.ebuild,
  +gossip-0.11.2-r1.ebuild:
  Sync DEPEND & RDEPEND with configure.ac; remove galago USE-flag as the
  galago daemon fails to start at all on my system. Add ~sparc back, this was
  lost over galago only.

*gossip-0.11.2 (15 Jun 2006)

  15 Jun 2006; Tony Vroon <chainsaw@gentoo.org> metadata.xml,
  +gossip-0.11.2.ebuild:
  net-im enters a joint maintainership of this package with the gnome herd,
  authorized by: allanonjl, dang, leonardop. Version bump to 0.11.2; closes
  bugs #128916 and #134911. Ebuild changes thanks to Mikel Olasagasti
  <hey_neken@euskal.org> and Hans de Graaff <hans@degraaff.org>. ~ppc64 and
  ~sparc lost their keywords due to the new dependencies, filed bug #136906.

  03 Jun 2006; Mark Loeser <halcy0n@gentoo.org> gossip-0.8.ebuild: