@@ -1,5 +1,6 @@
 DIST gossip-0.14.tar.bz2 1237673 RMD160 e48f185c7e3ce72d710ad5fca2cacdb2c3f14dc2 SHA1 020e534246589fdd4b43cddf0f544223fde31234 SHA256 9626bebac8e89786088dd89506a7e377134dfbe5a54bba3a74fb43f748cda900
 DIST gossip-0.15.tar.bz2 1382616 RMD160 56559b10fc1dcec776fd598c0062f69c4ea20c14 SHA1 c9a9aea4383293b823a7a845ac974c893f5e91ce SHA256 6bd401aec82b5ea263e80d3d661c84d6f6eca22c243a93562f1206f4101d67d0
+DIST gossip-0.16.tar.bz2 1430056 RMD160 d8fd50d010ff0e3b425013a85bd5b46c0c5cb568 SHA1 e4b4fb0eb9d19b30cc3afcce64b6260284e4c5e0 SHA256 01058211f49896a0f4e476309f4a3ff85a06d40fddd71930be93e5b8af908741
 DIST gossip-0.9.tar.bz2 994982
 EBUILD gossip-0.14.ebuild 1138 RMD160 6c0e3ee03d51e3469c9f4299d79ad4e751c1dcfe SHA1 22f71a0cf6ba6f5ea0decbb885f439575ad4219a SHA256 aeb427ed9f0b436d087495aad737074890287161c5767aa2e43645e9a0c79b5a
 MD5 64492e0b6332eeb4b21a64b787cde81f gossip-0.14.ebuild 1138
@@ -9,14 +10,18 @@ EBUILD gossip-0.15.ebuild 1138 RMD160 5026bf728ab12897be00696af29f45964d453baf S
 MD5 57ee76427956d6094fdac199a4f00e74 gossip-0.15.ebuild 1138
 RMD160 5026bf728ab12897be00696af29f45964d453baf gossip-0.15.ebuild 1138
 SHA256 baf89321f930b0a0a40365eb837c90b9f3a396e756068756e0fc8cc180931f35 gossip-0.15.ebuild 1138
+EBUILD gossip-0.16.ebuild 1138 RMD160 f3ee27531125919f0eeb394c65977caede0271ac SHA1 48e68f16b25ebff08a10c767f572cc8c678b448e SHA256 408f31b2c1af2f1e112830fc50e15886b90bc4e263adda08b5b2d3efa44b4f1c
+MD5 61d22f4c4ce3b838c1c78f023441e3eb gossip-0.16.ebuild 1138
+RMD160 f3ee27531125919f0eeb394c65977caede0271ac gossip-0.16.ebuild 1138
+SHA256 408f31b2c1af2f1e112830fc50e15886b90bc4e263adda08b5b2d3efa44b4f1c gossip-0.16.ebuild 1138
 EBUILD gossip-0.9.ebuild 935 RMD160 3e329567f3805e2f8367315e65db15a6d7cdf587 SHA1 5f1667ba6bb29c728cbcf01172f54a2fa1307a72 SHA256 34b3f4bb561c3d891c8d602a8d09eb5b3bc47b0d2a37e64a15561767d5a752cb
 MD5 b8871adaeceb5c2ddf1c1e82efac58ef gossip-0.9.ebuild 935
 RMD160 3e329567f3805e2f8367315e65db15a6d7cdf587 gossip-0.9.ebuild 935
 SHA256 34b3f4bb561c3d891c8d602a8d09eb5b3bc47b0d2a37e64a15561767d5a752cb gossip-0.9.ebuild 935
-MISC ChangeLog 7040 RMD160 8bd4ac502f5644276c15d1786cb575e62b728647 SHA1 0294caecffe95110156720d15db8506f34979c0b SHA256 5bdd010409d08f382306ef6397415ed1da7aa325588e5379576715d652711cb5
-MD5 a007d102112d47c259f991600bb0eed6 ChangeLog 7040
-RMD160 8bd4ac502f5644276c15d1786cb575e62b728647 ChangeLog 7040
-SHA256 5bdd010409d08f382306ef6397415ed1da7aa325588e5379576715d652711cb5 ChangeLog 7040
+MISC ChangeLog 7154 RMD160 31af7ef30ed20b2f50276152e5be25823597bbad SHA1 1365ce94890a1b03211f068168f69c0f3f0be990 SHA256 258c3ade89e6508865f1e6ddd2309051d9937d3da7ff366fd699467e32106a76
+MD5 264f25d2efa8c6cb9c3c9a990acbfc3b ChangeLog 7154
+RMD160 31af7ef30ed20b2f50276152e5be25823597bbad ChangeLog 7154
+SHA256 258c3ade89e6508865f1e6ddd2309051d9937d3da7ff366fd699467e32106a76 ChangeLog 7154
 MISC metadata.xml 291 RMD160 62e9279857b930af812c701a7b345fbf64dde1a4 SHA1 665642f3883be6b373c5852d37b2e361b8f6b3b6 SHA256 de23ac48a0a04ffb18b093b4698426ade841e315f2c88b15b32a6d6c7df3cf2c
 MD5 d401fd79e8f53e8a459710d3d037e1df metadata.xml 291
 RMD160 62e9279857b930af812c701a7b345fbf64dde1a4 metadata.xml 291
@@ -27,6 +32,9 @@ SHA256 99762241f44c9f8f27a8af83b058b809eb6d9198b3bb12179836af6cf3166642 files/di
 MD5 f4697e220ae1357124efba8c396b2b0c files/digest-gossip-0.15 241
 RMD160 d3686ec5bff3f8aa11e20ccbf981b77bcbaf0441 files/digest-gossip-0.15 241
 SHA256 65d093161e28861272440e034ecf037b461ea271ca99a06bd4e69671293a7eed files/digest-gossip-0.15 241
+MD5 74f896fc025d83818c635c93e505ad26 files/digest-gossip-0.16 241
+RMD160 7daa9021934a4aabe6db4997df623a53dbffa7c8 files/digest-gossip-0.16 241
+SHA256 62c4d1aadfdebe10e61aa757b908973ec138fb970a103c7de32da6f01d14b6b4 files/digest-gossip-0.16 241
 MD5 3db79d8ff10d29aaa94dbc80cb13a37b files/digest-gossip-0.9 63
 RMD160 3be2845ad6651a060fb794a161d32b448bc8d6d0 files/digest-gossip-0.9 63
 SHA256 9f6dae4088351b76efc69976f0a38a3f1738711075241af0118e379515795a47 files/digest-gossip-0.9 63
