@@ -1,0 +1,3 @@
+MD5 4534af568b59e07fba4238f75872226e gossip-0.16.tar.bz2 1430056
+RMD160 d8fd50d010ff0e3b425013a85bd5b46c0c5cb568 gossip-0.16.tar.bz2 1430056
+SHA256 01058211f49896a0f4e476309f4a3ff85a06d40fddd71930be93e5b8af908741 gossip-0.16.tar.bz2 1430056
