@@ -1,6 +1,11 @@
 # ChangeLog for net-im/gossip
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.47 2006/08/30 20:40:12 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.48 2006/09/17 15:05:17 foser Exp $
+
+*gossip-0.16 (17 Sep 2006)
+
+  17 Sep 2006; Marinus Schraal <foser@gentoo.org> gossip-0.16.ebuild :
+  New release
 
 *gossip-0.15 (30 Aug 2006)
 
